// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`>>> Checkboxes --- Snapshot +++capturing Snapshot of Checkboxes 1`] = `
<form
  className="dp-pc_form"
  onSubmit={[Function]}
>
  <div
    className="dp-pc_field"
  >
    <div
      className="dp-pc_checkboxes"
      description=""
      id={null}
    >
      <label
        className="dp-pc_checkboxes_checkbox"
        htmlFor="field_1-first"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        tabIndex="0"
      >
        <input
          checked={false}
          id="field_1-first"
          name="checkboxes"
          onChange={[Function]}
          type="checkbox"
          value="first"
        />
        <i />
         
        <span
          className="label"
        >
          First
        </span>
      </label>
      <label
        className="dp-pc_checkboxes_checkbox"
        htmlFor="field_1-second"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        tabIndex="0"
      >
        <input
          checked={false}
          id="field_1-second"
          name="checkboxes"
          onChange={[Function]}
          type="checkbox"
          value="second"
        />
        <i />
         
        <span
          className="label"
        >
          Second
        </span>
      </label>
      <label
        className="dp-pc_checkboxes_checkbox"
        htmlFor="field_1-last"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        tabIndex="0"
      >
        <input
          checked={false}
          id="field_1-last"
          name="checkboxes"
          onChange={[Function]}
          type="checkbox"
          value="last"
        />
        <i />
         
        <span
          className="label"
        >
          Last
        </span>
      </label>
    </div>
    <span
      className="indicator"
    />
    <span
      className="dp-pc_description"
    >
      
    </span>
    <label
      className="dp-pc_checkboxes_label"
      htmlFor="field_1"
    >
      
    </label>
  </div>
</form>
`;

exports[`>>> Checkboxes --- Snapshot +++capturing Snapshot of Checkboxes with existing value 1`] = `
<form
  className="dp-pc_form"
  onSubmit={[Function]}
>
  <div
    className="dp-pc_field"
  >
    <div
      className="dp-pc_checkboxes"
      description=""
      id="checkbox"
    >
      <label
        className="dp-pc_checkboxes_checkbox"
        htmlFor="checkbox-first"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        tabIndex="0"
      >
        <input
          checked={true}
          id="checkbox-first"
          name="checkboxes"
          onChange={[Function]}
          type="checkbox"
          value="first"
        />
        <i />
         
        <span
          className="label"
        >
          First
        </span>
      </label>
      <label
        className="dp-pc_checkboxes_checkbox"
        htmlFor="checkbox-second"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        tabIndex="0"
      >
        <input
          checked={false}
          id="checkbox-second"
          name="checkboxes"
          onChange={[Function]}
          type="checkbox"
          value="second"
        />
        <i />
         
        <span
          className="label"
        >
          Second
        </span>
      </label>
      <label
        className="dp-pc_checkboxes_checkbox"
        htmlFor="checkbox-last"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        tabIndex="0"
      >
        <input
          checked={false}
          id="checkbox-last"
          name="checkboxes"
          onChange={[Function]}
          type="checkbox"
          value="last"
        />
        <i />
         
        <span
          className="label"
        >
          Last
        </span>
      </label>
    </div>
    <span
      className="indicator"
    />
    <span
      className="dp-pc_description"
    >
      
    </span>
    <label
      className="dp-pc_checkboxes_label"
      htmlFor="checkbox"
    >
      
    </label>
  </div>
</form>
`;
